@@ -1500,6 +1500,8 @@ operator|.
 name|isOptional
 argument_list|()
 argument_list|,
+literal|true
+argument_list|,
 literal|null
 argument_list|)
 expr_stmt|;
@@ -1704,6 +1706,14 @@ name|scope
 argument_list|,
 name|optional
 argument_list|,
+name|dds
+index|[
+name|i
+index|]
+operator|.
+name|isTransitive
+argument_list|()
+argument_list|,
 name|excludes
 argument_list|)
 expr_stmt|;
@@ -1772,6 +1782,14 @@ name|scope
 argument_list|,
 name|optional
 argument_list|,
+name|dds
+index|[
+name|i
+index|]
+operator|.
+name|isTransitive
+argument_list|()
+argument_list|,
 name|excludes
 argument_list|)
 expr_stmt|;
@@ -1830,6 +1848,9 @@ name|scope
 parameter_list|,
 name|boolean
 name|isOptional
+parameter_list|,
+name|boolean
+name|isTransitive
 parameter_list|,
 name|ExcludeRule
 index|[]
@@ -2027,6 +2048,109 @@ argument_list|)
 expr_stmt|;
 block|}
 if|if
+condition|(
+operator|!
+name|isTransitive
+condition|)
+block|{
+name|indent
+argument_list|(
+name|out
+argument_list|,
+name|indent
+operator|*
+literal|3
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<exclusions>"
+argument_list|)
+expr_stmt|;
+name|indent
+argument_list|(
+name|out
+argument_list|,
+name|indent
+operator|*
+literal|4
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<exclusion>"
+argument_list|)
+expr_stmt|;
+name|indent
+argument_list|(
+name|out
+argument_list|,
+name|indent
+operator|*
+literal|5
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<groupId>*</groupId>"
+argument_list|)
+expr_stmt|;
+name|indent
+argument_list|(
+name|out
+argument_list|,
+name|indent
+operator|*
+literal|5
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<artifactId>*</artifactId>"
+argument_list|)
+expr_stmt|;
+name|indent
+argument_list|(
+name|out
+argument_list|,
+name|indent
+operator|*
+literal|4
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"</exclusion>"
+argument_list|)
+expr_stmt|;
+name|indent
+argument_list|(
+name|out
+argument_list|,
+name|indent
+operator|*
+literal|3
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"</exclusions>"
+argument_list|)
+expr_stmt|;
+block|}
+if|else if
 condition|(
 name|excludes
 operator|!=
