@@ -121,6 +121,22 @@ name|apache
 operator|.
 name|ivy
 operator|.
+name|plugins
+operator|.
+name|parser
+operator|.
+name|ModuleDescriptorParserRegistry
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
 name|util
 operator|.
 name|FileUtil
@@ -851,6 +867,129 @@ init|=
 name|readEntirely
 argument_list|(
 literal|"test-write-dependencies-optional.xml"
+argument_list|)
+operator|.
+name|replaceAll
+argument_list|(
+literal|"\r\n"
+argument_list|,
+literal|"\n"
+argument_list|)
+operator|.
+name|replace
+argument_list|(
+literal|'\r'
+argument_list|,
+literal|'\n'
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|expected
+argument_list|,
+name|wrote
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|testTransitive
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ModuleDescriptor
+name|md
+init|=
+name|ModuleDescriptorParserRegistry
+operator|.
+name|getInstance
+argument_list|()
+operator|.
+name|parseDescriptor
+argument_list|(
+operator|new
+name|IvySettings
+argument_list|()
+argument_list|,
+name|getClass
+argument_list|()
+operator|.
+name|getResource
+argument_list|(
+literal|"test-transitive.xml"
+argument_list|)
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|PomModuleDescriptorWriter
+operator|.
+name|write
+argument_list|(
+name|md
+argument_list|,
+name|_dest
+argument_list|,
+name|getWriterOptions
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|_dest
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|String
+name|wrote
+init|=
+name|FileUtil
+operator|.
+name|readEntirely
+argument_list|(
+operator|new
+name|BufferedReader
+argument_list|(
+operator|new
+name|FileReader
+argument_list|(
+name|_dest
+argument_list|)
+argument_list|)
+argument_list|)
+operator|.
+name|replaceAll
+argument_list|(
+literal|"\r\n"
+argument_list|,
+literal|"\n"
+argument_list|)
+operator|.
+name|replace
+argument_list|(
+literal|'\r'
+argument_list|,
+literal|'\n'
+argument_list|)
+decl_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+name|wrote
+argument_list|)
+expr_stmt|;
+name|String
+name|expected
+init|=
+name|readEntirely
+argument_list|(
+literal|"test-transitive.pom"
 argument_list|)
 operator|.
 name|replaceAll
